--- a/litreview/users/templates/home.html
+++ b/litreview/users/templates/home.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="connexion">
-    <form action="post">
+    <form method="post">
         {{ form.as_p}}
         {% csrf_token %}
         <button type = "submit">Se connecter</button>
