--- a/litreview/review/templates/create_ticket.html
+++ b/litreview/review/templates/create_ticket.html
@@ -10,4 +10,5 @@
     <button type='submit'>Envoyer</button>
 </form>
 
+<a href={% url 'feed' %} class="button"><button>Retourner</button></a>
 {% endblock content %}
