--- a/litreview/templates/base.html
+++ b/litreview/templates/base.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LITReview</title>
+    <link rel="stylesheet" href="{% static 'base.css' %}">
 </head>
 
 <body>
@@ -13,7 +16,7 @@
         <h1>LITReview</h1>
         {% if user.is_authenticated %}
         <nav>
-            <ul>
+            <ul id="navigation">
                 <li><a href="{% url 'feed' %}">Flux</a></li>
                 <li><a href="{% url 'posts' %}">Posts</a></li>
                 {% comment %} <li><a href="{% url 'subscriptions' %}">Abonnements</a></li> {% endcomment %}
