--- a/litreview/users/templates/home.html
+++ b/litreview/users/templates/home.html
@@ -1,20 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="inscription">
-    <h2>Inscrivez-vous maintenant</h2>
-    <form action="{% url 'signup' %}">
-        <button type='submit'>S'inscrire</button>
-    </form>
-</div>
-
-<div class="connexion">
-    <form method="post">
-        {{ form.as_p}}
-        {% csrf_token %}
+<div class="home">
+    <div class="inscription">
+        <h2>Inscrivez-vous maintenant</h2>
+        <form action="{% url 'signup' %}">
+            <button type='submit'>S'inscrire</button>
+        </form>
+    </div>
+    
+    <div class="connexion">
+        <form method="post">
+            {{ form.as_p}}
+            {% csrf_token %}
         <button type = "submit">Se connecter</button>
-    </form>
-
+        </form>
+    </div>
 </div>
+
 
 {% endblock content %}
