--- a/litreview/users/templates/subscriptions.html
+++ b/litreview/users/templates/subscriptions.html
@@ -4,8 +4,10 @@
 
 <div>
     <h2>Suivre d'autres utilisateurs</h2>
-    <form action="post">
-        
+    <form method="post">
+        {{ form.as_p }}
+        {% csrf_token %}
+    <button type='submit'>Envoyer</button>
     </form>
 </div>
 
