--- a/litreview/users/templates/subscriptions.html
+++ b/litreview/users/templates/subscriptions.html
@@ -5,11 +5,30 @@
 <div>
     <h2>Suivre d'autres utilisateurs</h2>
     <form method="post">
-        {{ form.as_p }}
+        {{ follow_user_form.as_p }}
         {% csrf_token %}
     <button type='submit'>Envoyer</button>
     </form>
 </div>
 
+<div class="subscriptions">
+    <h2>Abonnements</h2>
+    {% for subscription in subscriptions %}
+        <p>{{ subscription.followed_user.username }}</p>
+        <form method="post">
+            {{ unfollow_user_form.as_p }}
+            {% csrf_token %}
+            <button type='submit'>Se désabonner</button>
+        </form>
+        
+    {% endfor %}
+</div>
+
+<div class="subscribers">
+    <h2>Abonnés</h2>
+    {% for subscriber in subscribers %}
+        <p>{{ subscribers.user.username }}</p>
+    {% endfor %}
+</div>
 
 {% endblock content %}
