1ère version avec suppression et modification

--- a/litreview/review/templates/posts.html
+++ b/litreview/review/templates/posts.html
@@ -12,14 +12,14 @@
         {% if instance|model_type == 'Ticket' %}
             {% include 'partials/ticket_snippet.html' with ticket=instance %}
             <div class="button-edit">
-                <button type='submit'>Modifier</button>
-                <button type='submit'>Supprimer</button> 
+                <a href="{% url 'change_ticket' instance.id %}" class="button"><button>Modifier</button></a>
+                <a href="{% url 'delete_ticket' instance.id %}" class="button"><button>Supprimer</button></a> 
             </div>
         {% elif instance|model_type == 'Review' %}
             {% include 'partials/review_snippet.html' with review=instance %}  
             <div class="button-edit">
-                <button type='submit'>Modifier</button>
-                <button type='submit'>Supprimer</button> 
+                <a href="{% url 'change_review' instance.id %}" class="button"><button>Modifier</button></a>
+                <a href="{% url 'delete_review' instance.id %}" class="button"><button>Supprimer</button></a>
             </div>
         {% endif %}
     {% endfor %}
