--- a/litreview/templates/base.html
+++ b/litreview/templates/base.html
@@ -19,7 +19,7 @@
             <ul id="navigation">
                 <li><a href="{% url 'feed' %}">Flux</a></li>
                 <li><a href="{% url 'posts' %}">Posts</a></li>
-                {% comment %} <li><a href="{% url 'subscriptions' %}">Abonnements</a></li> {% endcomment %}
+                <li><a href="{% url 'subscriptions' %}">Abonnements</a></li>
                 <li><a href="{% url 'logout' %}">Se déconnecter</a></li>
             </ul>
         </nav>
