--- a/litreview/review/templates/create_review.html
+++ b/litreview/review/templates/create_review.html
@@ -2,10 +2,15 @@
 
 {% block content %}
 
+<h2>Créer une critique</h2>
 
-<form method="post" enctype="multipart/form-data">
-    {{ ticket_form.as_p }}
-    {{ review_form.as_p }}
+<form method="post" class="review-form" enctype="multipart/form-data">
+    <div>
+        {{ ticket_form.as_p }}
+    </div>
+    <div>
+        {{ review_form.as_p }}
+    </div>
     {% csrf_token %}
     <button type='submit'>Envoyer</button>
 </form>
