--- a/litreview/review/templates/create_ticket.html
+++ b/litreview/review/templates/create_ticket.html
@@ -4,7 +4,7 @@
 
 <h2>Créer un ticket</h2>
 
-<form method="post" enctype="multipart/form-data">
+<form method="post" class="ticket-form" enctype="multipart/form-data">
     {{ form.as_p }}
     {% csrf_token %}
     <button type='submit'>Envoyer</button>
