--- a/litreview/review/templates/partials/ticket_snippet.html
+++ b/litreview/review/templates/partials/ticket_snippet.html
@@ -13,7 +13,7 @@
         <img src="{{ ticket.image.url }}">
     </p>
     {% comment %} {% if ticket|ticket_already_with_review == False %} {% endcomment %}
-        <button type="submit"><a href="{% url 'add_review_to_ticket' ticket.id %}">Créer une critique</a></button>
+        <a href="{% url 'add_review_to_ticket' ticket.id %}" class='button'><button>Créer une critique</button></a>
     {% comment %} {% endif %} {% endcomment %}
     
 </div>
