--- a/litreview/review/templates/posts.html
+++ b/litreview/review/templates/posts.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 
-<p>Page avec tous mes posts</p>
+<h2>Vos posts</h2>
 
 {% if tickets_and_reviews %}
-    <div class="grid-container">
+    <div class="posts-container">
     {% for instance in tickets_and_reviews %}
         {% if instance|model_type == 'Ticket' %}
             {% include 'partials/ticket_snippet.html' with ticket=instance %}
