--- a/litreview/users/templates/home.html
+++ b/litreview/users/templates/home.html
@@ -2,14 +2,15 @@
 
 {% block content %}
 <div class="home">
-    <div class="inscription">
+    <div class="home-block">
         <h2>Inscrivez-vous maintenant</h2>
         <form action="{% url 'signup' %}">
             <button type='submit'>S'inscrire</button>
         </form>
     </div>
     
-    <div class="connexion">
+    <div class="home-block">
+        <h2>Connectez-vous</h2>
         <form method="post">
             {{ form.as_p}}
             {% csrf_token %}
