--- a/litreview/review/templates/change_ticket.html
+++ b/litreview/review/templates/change_ticket.html
@@ -4,11 +4,13 @@
 
 <h2>Modifier votre ticket</h2>
 
-<form method="post" enctype="multipart/form-data">
+<form method="post" class="ticket-form" enctype="multipart/form-data">
     {{ form.as_p }}
     {% csrf_token %}
     <button type='submit'>Envoyer</button>
 </form>
+
+<a href={% url 'posts' %} class="button"><button>Retourner</button></a>
 
 
 {% endblock content %}
