--- a/litreview/review/templates/posts.html
+++ b/litreview/review/templates/posts.html
@@ -6,9 +6,9 @@
 
 <h2>Vos posts</h2>
 
-{% if tickets_and_reviews %}
+{% if page_obj %}
     <div class="posts-container">
-    {% for instance in tickets_and_reviews %}
+    {% for instance in page_obj %}
         {% if instance|model_type == 'Ticket' %}
             <div class="ticket">
                 {% include 'partials/ticket_snippet.html' with ticket=instance %}
@@ -31,6 +31,23 @@
 {% else %}
     <p>Vous n'avez pas encore de posts.</p>
 {% endif %}
+
+<span>
+    {% if page_obj.has_previous %}
+        <a href="?page=1">« première</a>
+        <a href="?page={{ page_obj.previous_page_number }}">précédente</a>
+    {% endif %}
+
+    <span>
+        Page {{ page_obj.number }} sur {{ page_obj.paginator.num_pages }}.
+
+    </span>
+    {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}">suivante</a>
+        
+        <a href="?page={{ page_obj.paginator.num_pages }}">dernière »</a>
+    {% endif %}
+</span>
 
 {% endblock content %}
 
